docs-archive/apache-airflow-providers-amazon/1.1.0/_sources/_api/airflow/providers/amazon/aws/hooks/index.rst.txt
:mod:`airflow.providers.amazon.aws.hooks`
=========================================

.. py:module:: airflow.providers.amazon.aws.hooks


Submodules
----------
.. toctree::
   :titlesonly:
   :maxdepth: 1

   athena/index.rst
   aws_dynamodb/index.rst
   base_aws/index.rst
   batch_client/index.rst
   batch_waiters/index.rst
   cloud_formation/index.rst
   datasync/index.rst
   dynamodb/index.rst
   ec2/index.rst
   elasticache_replication_group/index.rst
   emr/index.rst
   glacier/index.rst
   glue/index.rst
   glue_catalog/index.rst
   glue_crawler/index.rst
   kinesis/index.rst
   lambda_function/index.rst
   logs/index.rst
   redshift/index.rst
   s3/index.rst
   sagemaker/index.rst
   secrets_manager/index.rst
   ses/index.rst
   sns/index.rst
   sqs/index.rst
   step_function/index.rst


